--- a/mysubdir/CMakeLists.txt
+++ b/mysubdir/CMakeLists.txt
@@ -1,13 +1,4 @@
-add_custom_target(common_source ALL DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/common.py")
+add_custom_target(common_source DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/common.py")
 
 add_executable(MyExe main.cpp)
-
-add_custom_command(
-  OUTPUT "${CMAKE_CURRENT_BINARY_DIR}/test.success"
-  DEPENDS MyExe
-  COMMAND ./test.py && ${CMAKE_COMMAND} -E touch "${CMAKE_CURRENT_BINARY_DIR}/test.success"
-  WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}"
-  VERBATIM
-)
-
-add_custom_target(MyTest ALL DEPENDS "${CMAKE_CURRENT_BINARY_DIR}/test.success" common_source)
+add_dependencies(MyExe common_source)
